fixed schedule alignment issue

--- a/app/assets/stylesheets/cricket.scss
+++ b/app/assets/stylesheets/cricket.scss
@@ -69,7 +69,7 @@
   min-height: 1px;
   width: 100%;
   background: #fff;
-  padding: 20px 0;
+  padding: 19px 94px;
 }
 
 .cl-scdl-lst{ 
@@ -106,7 +106,7 @@
   float: left;
   min-height: 1px;
   width: 67%;
-  padding-left: 10px;
+  padding-left: 60px;
 }
 
 .cl-scdl-intr{
